<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="start"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:weightSum="100">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@color/colorPrimary"
                    android:gravity="end"
                    android:orientation="vertical"
                    tools:context=".ui.activities.LoginActivity"
                    tools:viewBindingIgnore="true">

                    <ProgressBar
                        android:id="@+id/progress_Bar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:indeterminate = "true"
                        android:minWidth="200dp"
                        android:minHeight="50dp"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/logo_img"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_100sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:visibility="visible"
                        android:src="@drawable/android" />


                    <EditText
                        android:id="@+id/email_login_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/rounded_edit_text"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:hint="@string/email"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:text="@string/ready_email"
                        android:textColor="@color/black_text" />


                    <EditText
                        android:id="@+id/password_login_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/rounded_edit_text"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:text="@string/ready_pw"
                        android:textColor="@color/black_text" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/colorPrimary"
                    android:gravity="top"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login_btn"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_50sdp"
                        android:layout_marginEnd="@dimen/_50sdp"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:cornerRadius="@dimen/_7sdp" />

                    <TextView
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="OR"
                        android:textColor="@color/white_text"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Login With"
                        android:textColor="@color/white_text"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_60sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/google_btn"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:src="@drawable/google"
                            app:layout_constraintStart_toStartOf="@+id/others"
                            app:layout_constraintTop_toBottomOf="@+id/others" />

                        <ImageView
                            android:id="@+id/facebook_btn"
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_marginStart="@dimen/_50sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:src="@drawable/fb"
                            app:layout_constraintBottom_toBottomOf="@+id/google_btn"
                            app:layout_constraintEnd_toEndOf="@+id/others"
                            app:layout_constraintTop_toBottomOf="@+id/others" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</layout>